--- a/src/components/SideBar/sideBar.css
+++ b/src/components/SideBar/sideBar.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    z-index: 3;
+    background-color: white;
 }
 
 .sideBar a{
